nav bar align issue solved

--- a/style.css
+++ b/style.css
@@ -380,7 +380,6 @@ p {
     justify-content: center;
     align-self: center;
     text-align: center;
-    width: 100%;
 }
 
 .max-width{
